--- a/src/app/pago/page/realizar-pago/realizar-pago.html
+++ b/src/app/pago/page/realizar-pago/realizar-pago.html
@@ -1,143 +1,102 @@
 <div class="min-h-screen  py-10 px-4">
- 
-    <h2 class="text-3xl font-bold text-center text-gray-800 mb-8">
-      💳 Realizar Pago
-    </h2>
+
+  <h2 class="text-3xl font-bold text-center text-gray-800 mb-8">
+    💳 Realizar Pago
+  </h2>
 
 
-    <div class="grid grid-cols-1 lg:grid-cols-5 gap-8">
+  <div class="grid grid-cols-1 lg:grid-cols-5 gap-8">
 
-      <div class="lg:col-span-3">
+    <div class="lg:col-span-3">
 
-        <div class=" border rounded-xl p-5 shadow-sm">
-          <h3 class="text-lg font-semibold text-gray-700 mb-4">
-            👤 Clientes
-          </h3>
+      <div class=" border rounded-xl p-5 shadow-sm">
+        <h3 class="text-lg font-semibold text-gray-700 mb-4">
+          👤 Clientes
+        </h3>
 
-          <div class="max-h-[600px] overflow-y-auto">
-            <app-listar-cliente></app-listar-cliente>
-          </div>
+        <div class="max-h-[600px] overflow-y-auto">
+          <app-listar-cliente (clienteSeleccionado)="getCliente($event)"></app-listar-cliente>
         </div>
-
-      </div>
-
-  
-      <div class="lg:col-span-2 space-y-6">
-
-     
-        <div class="border rounded-xl p-6 bg-white shadow-sm hover:shadow-md transition">
-
-          <div class="flex items-center justify-between mb-3">
-            <label class="flex items-center gap-3 cursor-pointer">
-              <input type="radio" name="medidor" class="h-5 w-5 text-blue-600">
-              <span class="text-xl font-semibold text-gray-800">
-                Medidor M001
-              </span>
-            </label>
-
-            <span class="px-3 py-1 rounded-full text-xs font-semibold bg-green-100 text-green-700">
-              Activo
-            </span>
-          </div>
-
-          <p class="text-sm text-gray-600 mb-4">
-            📍 Av. Principal #123
-          </p>
-
-          <div class="overflow-x-auto">
-            <table class="w-full text-sm border rounded-lg overflow-hidden">
-              <thead class="bg-gray-100 text-gray-600">
-                <tr>
-                  <th class="px-3 py-2 text-left">Mes</th>
-                  <th class="px-3 py-2 text-center">Anterior</th>
-                  <th class="px-3 py-2 text-center">Actual</th>
-                  <th class="px-3 py-2 text-center">Consumo</th>
-                  <th class="px-3 py-2 text-center">Costo</th>
-                  <th class="px-3 py-2 text-center">✔</th>
-                </tr>
-              </thead>
-              <tbody class="divide-y">
-                <tr class="hover:bg-gray-50">
-                  <td class="px-3 py-2">Enero</td>
-                  <td class="px-3 py-2 text-center">100</td>
-                  <td class="px-3 py-2 text-center">150</td>
-                  <td class="px-3 py-2 text-center">50</td>
-                  <td class="px-3 py-2 text-center font-medium">Bs 50</td>
-                  <td class="px-3 py-2 text-center">
-                    <input type="checkbox" class="h-4 w-4 text-blue-600">
-                  </td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
-        </div>
-
-        <!-- Medidor M002 -->
-        <div class="border rounded-xl p-6 bg-white shadow-sm hover:shadow-md transition opacity-90">
-
-          <div class="flex items-center justify-between mb-3">
-            <label class="flex items-center gap-3 cursor-pointer">
-              <input type="radio" name="medidor" class="h-5 w-5 text-blue-600">
-              <span class="text-xl font-semibold text-gray-800">
-                Medidor M002
-              </span>
-            </label>
-
-            <span class="px-3 py-1 rounded-full text-xs font-semibold bg-red-100 text-red-700">
-              Suspendido
-            </span>
-          </div>
-
-          <p class="text-sm text-gray-600 mb-4">
-            📍 Calle Secundaria #456
-          </p>
-
-          <div class="overflow-x-auto">
-            <table class="w-full text-sm border rounded-lg overflow-hidden">
-              <thead class="bg-gray-100 text-gray-600">
-                <tr>
-                  <th class="px-3 py-2 text-left">Mes</th>
-                  <th class="px-3 py-2 text-center">Anterior</th>
-                  <th class="px-3 py-2 text-center">Actual</th>
-                  <th class="px-3 py-2 text-center">Consumo</th>
-                  <th class="px-3 py-2 text-center">Costo</th>
-                  <th class="px-3 py-2 text-center">✔</th>
-                </tr>
-              </thead>
-              <tbody class="divide-y">
-                <tr class="hover:bg-gray-50">
-                  <td class="px-3 py-2">Enero</td>
-                  <td class="px-3 py-2 text-center">50</td>
-                  <td class="px-3 py-2 text-center">80</td>
-                  <td class="px-3 py-2 text-center">30</td>
-                  <td class="px-3 py-2 text-center font-medium">Bs 30</td>
-                  <td class="px-3 py-2 text-center">
-                    <input type="checkbox" class="h-4 w-4 text-blue-600">
-                  </td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
-        </div>
-
-        <!-- TOTAL -->
-        <div class="flex justify-end">
-          <div class="bg-blue-50 border border-blue-200 rounded-lg px-6 py-3 text-blue-700 text-lg font-semibold">
-            Total a pagar: Bs <span id="totalSeleccionado">0</span>
-          </div>
-        </div>
-
-        <!-- BOTÓN -->
-        <div class="flex justify-end">
-          <button
-            class="bg-gradient-to-r from-blue-600 to-blue-700 text-white px-10 py-3 rounded-xl font-semibold shadow-lg hover:scale-105 transition">
-             Realizar Pago
-          </button>
-        </div>
-
       </div>
 
     </div>
+
+
+    <div class="lg:col-span-2 space-y-6">
+
+
+
+
+
+
+
+      @for (item of lecturasCliente$ | async; track $index) {
+
+      <div class="border rounded-xl p-6 bg-white shadow-sm hover:shadow-md transition opacity-90">
+
+        <div class="flex items-center justify-between mb-3">
+          <label class="flex items-center gap-3 cursor-pointer">
+            <input type="radio" name="medidor" class="h-5 w-5 text-blue-600">
+            <span class="text-xl font-semibold text-gray-800">
+              Medidor {{item.numeroMedidor}}
+            </span>
+          </label>
+
+          <span class="px-3 py-1 rounded-full text-xs font-semibold  ">
+            {{item.estado}}
+          </span>
+        </div>
+
+        <p class="text-sm text-gray-600 mb-4">
+         {{item.direccion}}
+        </p>
+
+        <div class="overflow-x-auto">
+          <table class="w-full text-sm border rounded-lg overflow-hidden">
+            <thead class="bg-gray-100 text-gray-600">
+              <tr>
+                <th class="px-3 py-2 text-left">Mes</th>
+                <th class="px-3 py-2 text-center">Anterior</th>
+                <th class="px-3 py-2 text-center">Actual</th>
+                <th class="px-3 py-2 text-center">Consumo</th>
+                <th class="px-3 py-2 text-center">Costo</th>
+                <th class="px-3 py-2 text-center">✔</th>
+              </tr>
+            </thead>
+            <tbody class="divide-y">
+              @for (item of item.lecturas; track $index) {
+              <tr class="hover:bg-gray-50">
+                <td class="px-3 py-2">{{item.mes}}</td>
+                <td class="px-3 py-2 text-center">{{item.lecturaAnterior}}</td>
+                <td class="px-3 py-2 text-center">{{item.lecturaActual}}</td>
+                <td class="px-3 py-2 text-center">{{item.consumoTotal}}</td>
+                <td class="px-3 py-2 text-center font-medium">{{item.costoApagar}} Bs</td>
+                <td class="px-3 py-2 text-center">
+                  <input type="checkbox" class="h-4 w-4 text-blue-600">
+                </td>
+              </tr>
+              }
+            </tbody>
+          </table>
+        </div>
+      </div>
+      }
+      <div class="flex justify-end">
+        <div class="bg-blue-50 border border-blue-200 rounded-lg px-6 py-3 text-blue-700 text-lg font-semibold">
+          Total a pagar: Bs <span id="totalSeleccionado">0</span>
+        </div>
+      </div>
+      <!-- BOTÓN -->
+      <div class="flex justify-end">
+        <button
+          class="bg-gradient-to-r from-blue-600 to-blue-700 text-white px-10 py-3 rounded-xl font-semibold shadow-lg hover:scale-105 transition">
+          Realizar Pago
+        </button>
+      </div>
+
+    </div>
+
+  </div>
 
 
 </div>
